# libredrop-android

./: .travis.yml  README.md  build.gradle
app/: build.gradle
app/src/androidTest/java/io/libredrop/android/: MainActivityTest.kt  PeersActivityTest.kt
app/src/androidTest/java/io/libredrop/android/testutils/: ElapsedTimeIdlingResource.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/io/libredrop/android/: Application.kt  BaseActivity.kt  BaseViewModel.kt  MainActivity.kt  Navigation.kt  PeersAdapter.kt  PeersRepository.kt  PeersViewModel.kt  ViewModelFactory.kt
app/src/main/java/io/libredrop/android/activity/: PeersActivity.kt  PeersAdapter.kt  PeersDIModule.kt  PeersRepository.kt  PeersViewModel.kt
app/src/main/java/io/libredrop/android/di/: ActivityBuilder.kt  ActivityModule.kt  ApplicationComponent.kt  ApplicationModule.kt  ViewModelKey.kt
app/src/main/java/io/libredrop/network/: Network.kt  PeerInfo.kt
app/src/main/java/io/libredrop/utils/: SingleLiveEvent.kt
app/src/main/kotlin/io/libredrop/android/: MainActivity.kt
app/src/main/kotlin/io/libredrop/network/: PeerInfo.kt
app/src/main/res/layout/: activity_main.xml  peer_item.xml
app/src/main/res/values/: strings.xml
app/src/main/rust/: Cargo.toml
app/src/main/rust/src/: future_logger.rs  java_context.rs  lib.rs
gradle/wrapper/: gradle-wrapper.properties
