[package]
name = "rust"
version = "1.0.0"
authors = ["Andrius Semionovas <aneworld@gmail.com>"]

[dependencies]
libredrop-net = { git = "https://github.com/libredrop/libredrop-net", commit = "a76cff8" }
jni = "0.10.2"
android_logger = "0.6.0"
log = "0.4.6"
unwrap = "1.2.1"
tokio = "0.1.13"
get_if_addrs = "0.5.3"
futures = "0.1.25"

[lib]
crate_type = ["staticlib", "dylib"]
