[package]
name = "rust"
version = "1.0.0"
authors = ["Andrius Semionovas <aneworld@gmail.com>"]

[dependencies]
libredrop-net = { git = "https://github.com/libredrop/libredrop-net", rev = "b4dcc74" }
jni = "0.12.3"
android_logger = "0.8.3"
log = "0.4.6"
unwrap = "1.2.1"
tokio = "0.1.13"
futures = "0.1.27"
future-utils = "0.12.1"
void = "1.0.2"

[lib]
crate_type = ["staticlib", "dylib"]
